@@ -1,5 +1,5 @@
 .\" filter command-line reference
-.\" $Id: filtergen.8,v 1.2 2002/07/18 21:20:02 matthew Exp $
+.\" $Id: filtergen.8,v 1.3 2002/08/20 22:54:38 matthew Exp $
 .TH FILTERGEN 8
 
 .SH NAME
@@ -11,6 +11,8 @@ filtergen \- A packet filter compiler
 .B -n
 ] [
 .B -l
+] [
+.B -m
 ] [
 .B -h
 |
@@ -57,6 +59,11 @@ shorter rulesets by reducing the number of rules required for matching
 packets on established connections.  This can be more efficient to
 execute, but may be less tight, depending upon the quality of the state
 engine in the underlying packet filter.
+
+.TP
+.BI "\-m"
+Perform lookups.  This causes all hostnames and service names to be
+turned into IP addresses and port numbers, respectively.
 
 .TP
 .BI "\-h"
