@@ -1,7 +1,11 @@
 # test port ranges
-# $Id: tport.filter,v 1.1 2001/10/04 14:02:43 matthew Exp $
+# $Id: tport.filter,v 1.2 2002/08/20 22:54:38 matthew Exp $
 
 input eth0 {
+	proto tcp dport www accept;
+	proto udp dport bootps reject;
+	proto tcp dport 57 drop;
+	proto tcp sport http:https accept;
 	proto tcp source foo dest bar dport 40000:40050 accept;
 	reject;
 };
